`Added text-align: justify to p element and various styles to .artic1 and .artic2 classes.`

--- a/outline.html
+++ b/outline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box</title>
+    <title>outline</title>
     <style>
         div{
             background-color: darkgoldenrod;
@@ -27,9 +27,9 @@
             background-color: burlywood;
             padding: 20px 10px 10px 10px;
             margin: 10px;
-            border-style: solid dotted dashed double; 
-            border-width: 5px;
-            border-top-left-radius: 20px;
+            outline-style: solid;
+            outline-width: 10px;
+            border-radius: 10px;
             /* 
             kalau 1 = semua
             kalau 2 = atas dan bawah, kiri dan kanan
