--- a/background-image.html
+++ b/background-image.html
@@ -6,12 +6,13 @@
     <title>background image</title>
     <style>
         body{
-            background-color: brown;
+            background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(29,158,253,1) 50%, rgba(252,176,69,1) 100%);
         }
         .konten {
             background-image: url("img/download.jpg");;
             padding: 50px 30px 20px;
             color: lightcyan;
+            opacity: 50%;
             background-repeat: round;
     
         }
